--- a/angular.json
+++ b/angular.json
@@ -94,7 +94,6 @@
             ],
             "styles": [
               "src/styles.scss"
-              
             ],
             "scripts": []
           }
@@ -123,8 +122,13 @@
               "devServerTarget": "blog:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {}
         }
       }
-    }},
+    }
+  },
   "defaultProject": "blog"
 }
